Fixed bug where the navbar is hidden by the projects heading

--- a/src/index.css
+++ b/src/index.css
@@ -43,7 +43,7 @@ nav{
   position: fixed;
   width:100%;
   /* padding-bottom: 10px; */
-  z-index: 2;
+  z-index: 3;
 }
 
 nav ul{
@@ -58,7 +58,6 @@ nav ul{
   position:absolute;
   top:100%;
   background-color: var(--complementary-colour-blue);
-  z-index: 3;
 }
 
 nav li{
